# Lambda_Test_using_pylenium_poetry

./: pyproject.toml
Tests/: test_demo1.py
Tests/Lambda_Test_remote/: conftest.py  test_remotelambda.py
Tests/Lamda_Todolist_Test/: conftest.py  test_alterpage.py  test_lambda.py
Tests/Lamda_Todolist_Test/utility/: test_base_class.py
Tests/ui_test/: conftest.py  test_google_new_search.py
