[tool.poetry]
name = "unhashed_lambda_test"
version = "0.1.0"
description = ""
authors = ["Pratik K Sarangi <81045908+psarangi550@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^4.2.0"
pytest = "^7.1.2"
pytest-html = "^3.1.1"
webdriver-manager = "^3.7.0"
pylenium = "^1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
